lib/src/compiler/tests/testdata/errors/124.out
error[E001]: syntax error
 --> line:3:5
  |
3 |     !
  |     ^ this `!` is outside of the condition of a `for .. of` statement
  |